crates/tests/tools/header2rdl/tests/include/um/PhotoAcquire.h

typedef interface IPhotoAcquireItem IPhotoAcquireItem;
typedef interface IUserInputString IUserInputString;
typedef interface IPhotoAcquireProgressCB IPhotoAcquireProgressCB;
typedef interface IPhotoProgressActionCB IPhotoProgressActionCB;
typedef interface IPhotoProgressDialog IPhotoProgressDialog;
typedef interface IPhotoAcquireSource IPhotoAcquireSource;
typedef interface IPhotoAcquire IPhotoAcquire;
typedef interface IPhotoAcquireSettings IPhotoAcquireSettings;
typedef interface IPhotoAcquireOptionsDialog IPhotoAcquireOptionsDialog;
typedef interface IPhotoAcquireDeviceSelectionDialog IPhotoAcquireDeviceSelectionDialog;
typedef interface IPhotoAcquirePlugin IPhotoAcquirePlugin;
typedef class PhotoAcquire PhotoAcquire;
typedef struct PhotoAcquire PhotoAcquire;
typedef class PhotoAcquireAutoPlayDropTarget PhotoAcquireAutoPlayDropTarget;
typedef struct PhotoAcquireAutoPlayDropTarget PhotoAcquireAutoPlayDropTarget;
typedef class PhotoAcquireAutoPlayHWEventHandler PhotoAcquireAutoPlayHWEventHandler;
typedef struct PhotoAcquireAutoPlayHWEventHandler PhotoAcquireAutoPlayHWEventHandler;
typedef class PhotoAcquireOptionsDialog PhotoAcquireOptionsDialog;
typedef struct PhotoAcquireOptionsDialog PhotoAcquireOptionsDialog;
typedef class PhotoProgressDialog PhotoProgressDialog;
typedef struct PhotoProgressDialog PhotoProgressDialog;
typedef class PhotoAcquireDeviceSelectionDialog PhotoAcquireDeviceSelectionDialog;
typedef struct PhotoAcquireDeviceSelectionDialog PhotoAcquireDeviceSelectionDialog;
/* interface IUserInputString */
/* [unique][uuid][object][helpstring] */ 

typedef /* [v1_enum] */ 
enum tagUSER_INPUT_STRING_TYPE
    {
        USER_INPUT_DEFAULT	= 0,
        USER_INPUT_PATH_ELEMENT	= 0x1
    } 	USER_INPUT_STRING_TYPE;
/* interface IPhotoAcquireProgressCB */
/* [unique][uuid][object][helpstring] */ 

typedef /* [v1_enum] */ 
enum tagERROR_ADVISE_MESSAGE_TYPE
    {
        PHOTOACQUIRE_ERROR_SKIPRETRYCANCEL	= 0,
        PHOTOACQUIRE_ERROR_RETRYCANCEL	= 1,
        PHOTOACQUIRE_ERROR_YESNO	= 2,
        PHOTOACQUIRE_ERROR_OK	= 3
    } 	ERROR_ADVISE_MESSAGE_TYPE;
typedef /* [v1_enum] */ 
enum tagERROR_ADVISE_RESULT
    {
        PHOTOACQUIRE_RESULT_YES	= 0,
        PHOTOACQUIRE_RESULT_NO	= 1,
        PHOTOACQUIRE_RESULT_OK	= 2,
        PHOTOACQUIRE_RESULT_SKIP	= 3,
        PHOTOACQUIRE_RESULT_SKIP_ALL	= 4,
        PHOTOACQUIRE_RESULT_RETRY	= 5,
        PHOTOACQUIRE_RESULT_ABORT	= 6
    } 	ERROR_ADVISE_RESULT;
/* interface __MIDL_itf_photoacquire_0000_0004 */
/* [local] */ 

#define PROGRESS_INDETERMINATE (-1)
/* interface IPhotoProgressDialog */
/* [unique][uuid][object][helpstring] */ 

typedef /* [v1_enum] */ 
enum tagPROGRESS_DIALOG_IMAGE_TYPE
    {
        PROGRESS_DIALOG_ICON_SMALL	= 0,
        PROGRESS_DIALOG_ICON_LARGE	= 0x1,
        PROGRESS_DIALOG_ICON_THUMBNAIL	= 0x2,
        PROGRESS_DIALOG_BITMAP_THUMBNAIL	= 0x3
    } 	PROGRESS_DIALOG_IMAGE_TYPE;
typedef /* [v1_enum] */ 
enum tagPROGRESS_DIALOG_CHECKBOX_ID
    {
        PROGRESS_DIALOG_CHECKBOX_ID_DEFAULT	= 0
    } 	PROGRESS_DIALOG_CHECKBOX_ID;
/* interface __MIDL_itf_photoacquire_0000_0007 */
/* [local] */ 

// IPhotoAcquire::Acquire will return this value if a user operation requires a restart.
// If you receive this, you should discard all interfaces and restart completely.
// You can only receive this if you specify the PHOTOACQ_ABORT_ON_SETTINGS_UPDATE flag.
#define PHOTOACQ_ERROR_RESTART_REQUIRED MAKE_HRESULT(SEVERITY_ERROR, FACILITY_ITF, 0xA001)
#define PHOTOACQ_RUN_DEFAULT                      0x00000000
// Acquisition flags
// In versions of Windows that don't include Windows Photo Gallery,
// PHOTOACQ_NO_GALLERY_LAUNCH suppresses the explorer window launched after acquisition.
// In versions of Windows that don't include Windows Photo Gallery,
// PHOTOACQ_DISABLE_DB_INTEGRATION and PHOTOACQ_DISABLE_DUPLICATE_DETECTION are implied.
#define PHOTOACQ_NO_GALLERY_LAUNCH                0x00000001
#define PHOTOACQ_DISABLE_AUTO_ROTATE              0x00000002
#define PHOTOACQ_DISABLE_PLUGINS                  0x00000004
#define PHOTOACQ_DISABLE_GROUP_TAG_PROMPT         0x00000008
#define PHOTOACQ_DISABLE_DB_INTEGRATION           0x00000010
#define PHOTOACQ_DELETE_AFTER_ACQUIRE             0x00000020
#define PHOTOACQ_DISABLE_DUPLICATE_DETECTION      0x00000040
#define PHOTOACQ_ENABLE_THUMBNAIL_CACHING         0x00000080
#define PHOTOACQ_DISABLE_METADATA_WRITE           0x00000100
#define PHOTOACQ_DISABLE_THUMBNAIL_PROGRESS       0x00000200
#define PHOTOACQ_DISABLE_SETTINGS_LINK            0x00000400
#define PHOTOACQ_ABORT_ON_SETTINGS_UPDATE         0x00000800
#define    PHOTOACQ_IMPORT_VIDEO_AS_MULTIPLE_FILES   0x00001000
/* interface __MIDL_itf_photoacquire_0000_0009 */
/* [local] */ 

#define DSF_WPD_DEVICES    0x00000001
#define DSF_WIA_CAMERAS    0x00000002
#define DSF_WIA_SCANNERS   0x00000004
#define DSF_STI_DEVICES    0x00000008
#define DSF_TWAIN_DEVICES  0x00000010
#define DSF_FS_DEVICES     0x00000020
#define DSF_DV_DEVICES     0x00000040
#define DSF_ALL_DEVICES    0x0000FFFF
#define DSF_CPL_MODE       0x00010000
#define DSF_SHOW_OFFLINE   0x00020000
/* interface IPhotoAcquireDeviceSelectionDialog */
/* [unique][uuid][object][helpstring] */ 

typedef /* [v1_enum] */ 
enum tagDEVICE_SELECTION_DEVICE_TYPE
    {
        DST_UNKNOWN_DEVICE	= 0,
        DST_WPD_DEVICE	= 0x1,
        DST_WIA_DEVICE	= 0x2,
        DST_STI_DEVICE	= 0x3,
        DSF_TWAIN_DEVICE	= 0x4,
        DST_FS_DEVICE	= 0x5,
        DST_DV_DEVICE	= 0x6
    } 	DEVICE_SELECTION_DEVICE_TYPE;
/* interface __MIDL_itf_photoacquire_0000_0010 */
/* [local] */ 

#define PAPS_PRESAVE   0x00000000
#define PAPS_POSTSAVE  0x00000001
#define PAPS_CLEANUP   0x00000002