crates/deps/sys/src/Windows/Win32/Media/PictureAcquisition/mod.rs

#![allow(non_snake_case, non_camel_case_types)]
#[link(name = "windows")]
extern "system" {
    fn DEVICE_SELECTION_DEVICE_TYPE();
    fn DSF_ALL_DEVICES();
    fn DSF_CPL_MODE();
    fn DSF_DV_DEVICES();
    fn DSF_FS_DEVICES();
    fn DSF_SHOW_OFFLINE();
    fn DSF_STI_DEVICES();
    fn DSF_TWAIN_DEVICES();
    fn DSF_WIA_CAMERAS();
    fn DSF_WIA_SCANNERS();
    fn DSF_WPD_DEVICES();
    fn ERROR_ADVISE_MESSAGE_TYPE();
    fn ERROR_ADVISE_RESULT();
    fn IPhotoAcquire();
    fn IPhotoAcquireDeviceSelectionDialog();
    fn IPhotoAcquireItem();
    fn IPhotoAcquireOptionsDialog();
    fn IPhotoAcquirePlugin();
    fn IPhotoAcquireProgressCB();
    fn IPhotoAcquireSettings();
    fn IPhotoAcquireSource();
    fn IPhotoProgressActionCB();
    fn IPhotoProgressDialog();
    fn IUserInputString();
    fn PAPS_CLEANUP();
    fn PAPS_POSTSAVE();
    fn PAPS_PRESAVE();
    fn PHOTOACQ_ABORT_ON_SETTINGS_UPDATE();
    fn PHOTOACQ_DELETE_AFTER_ACQUIRE();
    fn PHOTOACQ_DISABLE_AUTO_ROTATE();
    fn PHOTOACQ_DISABLE_DB_INTEGRATION();
    fn PHOTOACQ_DISABLE_DUPLICATE_DETECTION();
    fn PHOTOACQ_DISABLE_GROUP_TAG_PROMPT();
    fn PHOTOACQ_DISABLE_METADATA_WRITE();
    fn PHOTOACQ_DISABLE_PLUGINS();
    fn PHOTOACQ_DISABLE_SETTINGS_LINK();
    fn PHOTOACQ_DISABLE_THUMBNAIL_PROGRESS();
    fn PHOTOACQ_ENABLE_THUMBNAIL_CACHING();
    fn PHOTOACQ_ERROR_RESTART_REQUIRED();
    fn PHOTOACQ_IMPORT_VIDEO_AS_MULTIPLE_FILES();
    fn PHOTOACQ_NO_GALLERY_LAUNCH();
    fn PHOTOACQ_RUN_DEFAULT();
    fn PKEY_PhotoAcquire_CameraSequenceNumber();
    fn PKEY_PhotoAcquire_DuplicateDetectionID();
    fn PKEY_PhotoAcquire_FinalFilename();
    fn PKEY_PhotoAcquire_GroupTag();
    fn PKEY_PhotoAcquire_IntermediateFile();
    fn PKEY_PhotoAcquire_OriginalFilename();
    fn PKEY_PhotoAcquire_RelativePathname();
    fn PKEY_PhotoAcquire_SkipImport();
    fn PKEY_PhotoAcquire_TransferResult();
    fn PROGRESS_DIALOG_CHECKBOX_ID();
    fn PROGRESS_DIALOG_IMAGE_TYPE();
    fn PROGRESS_INDETERMINATE();
    fn PhotoAcquire();
    fn PhotoAcquireAutoPlayDropTarget();
    fn PhotoAcquireAutoPlayHWEventHandler();
    fn PhotoAcquireDeviceSelectionDialog();
    fn PhotoAcquireOptionsDialog();
    fn PhotoProgressDialog();
    fn USER_INPUT_STRING_TYPE();
}
